--- a/samples/settings.gradle
+++ b/samples/settings.gradle
@@ -25,3 +25,6 @@ include ':drumthumper'
 include ':parselib'
 include ':iolib'
 include ':LiveEffect:amp'
+include ':LiveEffect:delay'
+include ':LiveEffect:filter'
+include ':LiveEffect:sine'
