--- a/samples/settings.gradle
+++ b/samples/settings.gradle
@@ -28,3 +28,4 @@ include ':LiveEffect:amp'
 include ':LiveEffect:delay'
 include ':LiveEffect:filter'
 include ':LiveEffect:sine'
+include ':LiveEffect:noise'
